--- a/changelog
+++ b/changelog
@@ -2,6 +2,12 @@
 
 ### INDEV - VERSON 0 ###
 
+2017/05/21:
+
+0.2:
+      #Added in tooltips.
+      #Worked on design for conversion menu.
+
 0.1:
       #Added in main menu.
       #Added in the first conversion menu, Star Wars currency.
