--- a/changelog
+++ b/changelog
@@ -4,6 +4,12 @@
 
 2017/05/21:
 
+0.3.1:
+      #Fixed error handling.
+
+0.3:
+      #Added in error handling to prevent strings or symbols being converted.
+
 0.2:
       #Added in tooltips.
       #Worked on design for conversion menu.
