--- a/changelog
+++ b/changelog
@@ -4,6 +4,14 @@
 
 2017/05/21:
 
+0.5:
+      #Can convert from credits and to credits.
+
+0.4:
+      #Can convert from real life currencies to Star Wars' Galactic Credit Standard (GCS)
+      #Supported currencies: AUD, CAD, CHF, EUR, GBP, HKD, INR, JPY, NOK, PHP, RUB, SEK, USD
+
+
 0.3.1:
       #Fixed error handling.
 
